Refactorings made to correct God Class problem